			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1594 2001/03/06 11:24:18 jinmei Exp $

<200103>
2001-03-06  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6_rtr.c (nd6_prefix_onlink): set RTF_GATEWAY
	to an interface direct route when nd6_need_cache() is false, in
	order to prevent nd6_rtrequest() from setting RTF_LLINFO (which
	annoys the ndp(8) command).
	This change is based on a report from nobumichi ozoe
	<nobumichi_ozoe@ydc.co.jp>.

Tue Mar  6 09:22:56 JST 2001  itojun@iijlab.net
	* sys/netinet6/raw_ip6.c: permit IPV6_CHECKSUM socket option for
	  the following cases only (previously it was allowed for any AF_INET6
	  socket): raw ip6 socket, and protocol != IPPROTO_ICMPV6.
	  RFC2292 section 3.1.  commented by yoshfuji.

2001-03-05  Jason R. Thorpe  <thorpej@zembu.com>

	* kame/racoon/gssapi.c: Use GSS_C_MECH_CODE when reporting
	GSSAPI errors.

2001-03-05  Jason R. Thorpe  <thorpej@zembu.com>

	* kame/racoon/handler.c: Implement deleteallph2(), which
	deletes all Phase 2 handlers for a given src/dst/proto.
	* kame/racoon/isakmp_inf.c: When processing INITIAL-CONTACT,
	try to use the SADB_DELETE `delete all' extension and
	deleteallph2() before doing it The Hard Way.  For both The
	Easy Way and The Hard Way, make sure we only delete SAD entries
	for SATYPEs that we manage.
	* kame/racoon/pfkey.c: Use a table of SATYPEs that we manage,
	and use that table to initialize our PF_KEY state.

2001-03-05  Jason R. Thorpe  <thorpej@zembu.com>

	* kame/libipsec/pfkey.c: Add pfkey_send_delete_all(), which
	sends an SADB_DELETE with satype/mode/src/dst.

Mon Mar  5 JST 2001  itojun@iijlab.net
	* sys/netinet6/raw_ip6.c: avoid 1-byte mbuf buffer overrun, and/or
	  unaligned memory access, in rip6_output().  commented by yoshfuji.
	  it will be tickled only if a evil/buggy root process runs.

2001-03-04  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_free): moved a line calling